--- a/obo-stadium/template/buying-selling-products.pug
+++ b/obo-stadium/template/buying-selling-products.pug
@@ -150,7 +150,7 @@ block mainContent
                 .header-item
                   .order-number-wrapper
                     | Mã đơn 
-                    a.order-number(href='#')
+                    a.order-number(href='./sell-details.html')
                       | #123abc
                   a.full-details(href='#')
                     | Xem chi tiết
