--- a/obo-stadium/template/sell-page.pug
+++ b/obo-stadium/template/sell-page.pug
@@ -11,6 +11,7 @@ block customizeCss
   link(rel='stylesheet' type='text/css' href='./css/components/buying/buying-section.css')
   link(rel="stylesheet" type="text/css" href="./css/components/product-details/size-guide-table.css")
   link(rel="stylesheet" type="text/css" href="./css/components/input-radio.css")
+  link(rel="stylesheet" type="text/css" href="./css/components/payment-methods-modal.css")
 
   // Common CSS
   link(rel="stylesheet" type="text/css" href="./css/main.css")
