--- a/obo-stadium/sass/index.scss
+++ b/obo-stadium/sass/index.scss
@@ -124,8 +124,10 @@ header {
 }
 
 .form-control {
-    &:focus {
-        border-color: white !important;
+    &.search-input {
+        &:focus {
+            border-color: white !important;
+        }
     }
 }
 
