update pagination news page

--- a/obo-stadium/template/faqs.pug
+++ b/obo-stadium/template/faqs.pug
@@ -52,19 +52,15 @@ block mainContent
                 | Mua h&agrave;ng tr&ecirc;n OBO Stadium
                 i.fas.fa-chevron-down
           #collapseTwo.collapse(aria-labelledby='headingTwo' data-parent='#accordionExample')
-            .card-body
-              | Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
-              | squid. 3 wolf
-              | moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt
-              | laborum eiusmod.
-              | Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla
-              | assumenda
-              | shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
-              | nesciunt sapiente ea
-              | proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-              | farm-to-table, raw denim
-              | aesthetic synth nesciunt you probably haven&apos;t heard of them accusamus labore sustainable
-              | VHS.
+            .card-body 
+              .question 1. Làm thế nào để đăng ký tài khoản trên OBO Stadium?
+              .answer Quý khách bấm nút "Đăng ký" ở góc phải trên cùng màn hình, điền đủ các thông tin theo yêu cầu.
+            .card-body 
+              .question 2. Vì sao tôi không nhận được email kích hoạt tài khoản?
+              .answer Nếu Quý khách không tìm thấy email kích hoạt trong mục Inbox, vui lòng kiểm tra trong mục Thư rác/Spam/Email.
+            .card-body 
+              .question 3. Làm thế nào để thay đổi thông tin trong tài khoản mua hàng của tôi?
+              .answer Để thay đổi thông tin trong tài khoản mua hàng tại OBO Stadium, Quý khách vui lòng đăng nhập vào tài khoản của mình. Click vào nút tam giác cạnh tên tài khoản của bạn, chọn » Quản lý tài khoản » click chọn Thông tin cơ bản » click chỉnh sửa để chỉnh sửa thông tin cần thiết..
         .card
           #headingThree.card-header
             h2.mb-0
@@ -72,19 +68,15 @@ block mainContent
                 | B&aacute;n h&agrave;ng tr&ecirc;n OBO Stadium
                 i.fas.fa-chevron-down
           #collapseThree.collapse(aria-labelledby='headingThree' data-parent='#accordionExample')
-            .card-body
-              | Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
-              | squid. 3 wolf
-              | moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt
-              | laborum eiusmod.
-              | Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla
-              | assumenda
-              | shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
-              | nesciunt sapiente ea
-              | proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-              | farm-to-table, raw denim
-              | aesthetic synth nesciunt you probably haven&apos;t heard of them accusamus labore sustainable
-              | VHS.
+            .card-body 
+              .question 1. Làm thế nào để đăng ký tài khoản trên OBO Stadium?
+              .answer Quý khách bấm nút "Đăng ký" ở góc phải trên cùng màn hình, điền đủ các thông tin theo yêu cầu.
+            .card-body 
+              .question 2. Vì sao tôi không nhận được email kích hoạt tài khoản?
+              .answer Nếu Quý khách không tìm thấy email kích hoạt trong mục Inbox, vui lòng kiểm tra trong mục Thư rác/Spam/Email.
+            .card-body 
+              .question 3. Làm thế nào để thay đổi thông tin trong tài khoản mua hàng của tôi?
+              .answer Để thay đổi thông tin trong tài khoản mua hàng tại OBO Stadium, Quý khách vui lòng đăng nhập vào tài khoản của mình. Click vào nút tam giác cạnh tên tài khoản của bạn, chọn » Quản lý tài khoản » click chọn Thông tin cơ bản » click chỉnh sửa để chỉnh sửa thông tin cần thiết..
         .card
           #headingFour.card-header
             h2.mb-0
@@ -92,19 +84,15 @@ block mainContent
                 | Giao nh&#x1EAD;n h&agrave;ng
                 i.fas.fa-chevron-down
           #collapseFour.collapse(aria-labelledby='headingFour' data-parent='#accordionExample')
-            .card-body
-              | Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
-              | squid. 3 wolf
-              | moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt
-              | laborum eiusmod.
-              | Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla
-              | assumenda
-              | shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
-              | nesciunt sapiente ea
-              | proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-              | farm-to-table, raw denim
-              | aesthetic synth nesciunt you probably haven&apos;t heard of them accusamus labore sustainable
-              | VHS.
+            .card-body 
+              .question 1. Làm thế nào để đăng ký tài khoản trên OBO Stadium?
+              .answer Quý khách bấm nút "Đăng ký" ở góc phải trên cùng màn hình, điền đủ các thông tin theo yêu cầu.
+            .card-body 
+              .question 2. Vì sao tôi không nhận được email kích hoạt tài khoản?
+              .answer Nếu Quý khách không tìm thấy email kích hoạt trong mục Inbox, vui lòng kiểm tra trong mục Thư rác/Spam/Email.
+            .card-body 
+              .question 3. Làm thế nào để thay đổi thông tin trong tài khoản mua hàng của tôi?
+              .answer Để thay đổi thông tin trong tài khoản mua hàng tại OBO Stadium, Quý khách vui lòng đăng nhập vào tài khoản của mình. Click vào nút tam giác cạnh tên tài khoản của bạn, chọn » Quản lý tài khoản » click chọn Thông tin cơ bản » click chỉnh sửa để chỉnh sửa thông tin cần thiết..
         .card
           #headingFive.card-header
             h2.mb-0
@@ -112,19 +100,15 @@ block mainContent
                 | Ph&#x1B0;&#x1A1;ng th&#x1EE9;c thanh to&aacute;n
                 i.fas.fa-chevron-down
           #collapseFive.collapse(aria-labelledby='headingFive' data-parent='#accordionExample')
-            .card-body
-              | Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
-              | squid. 3 wolf
-              | moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt
-              | laborum eiusmod.
-              | Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla
-              | assumenda
-              | shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
-              | nesciunt sapiente ea
-              | proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-              | farm-to-table, raw denim
-              | aesthetic synth nesciunt you probably haven&apos;t heard of them accusamus labore sustainable
-              | VHS.
+            .card-body 
+              .question 1. Làm thế nào để đăng ký tài khoản trên OBO Stadium?
+              .answer Quý khách bấm nút "Đăng ký" ở góc phải trên cùng màn hình, điền đủ các thông tin theo yêu cầu.
+            .card-body 
+              .question 2. Vì sao tôi không nhận được email kích hoạt tài khoản?
+              .answer Nếu Quý khách không tìm thấy email kích hoạt trong mục Inbox, vui lòng kiểm tra trong mục Thư rác/Spam/Email.
+            .card-body 
+              .question 3. Làm thế nào để thay đổi thông tin trong tài khoản mua hàng của tôi?
+              .answer Để thay đổi thông tin trong tài khoản mua hàng tại OBO Stadium, Quý khách vui lòng đăng nhập vào tài khoản của mình. Click vào nút tam giác cạnh tên tài khoản của bạn, chọn » Quản lý tài khoản » click chọn Thông tin cơ bản » click chỉnh sửa để chỉnh sửa thông tin cần thiết..
 
 block footer
   include ./template-parts/footer
