--- a/obo-stadium/template/shop.pug
+++ b/obo-stadium/template/shop.pug
@@ -10,6 +10,7 @@ block customizeCss
   link(rel="stylesheet" type="text/css" href="./css/components/shop/filter-bar.css")
   link(rel="stylesheet" type="text/css" href="./css/components/shop/product-showing.css")
   link(rel="stylesheet" type="text/css" href="./css/components/shop/filter-bar-small.css")
+  link(rel='stylesheet' type='text/css' href='./css/components/pagination.css')
 
   // Common CSS
   link(rel="stylesheet" type="text/css" href="./css/main.css")
