--- a/obo-stadium/template/news.pug
+++ b/obo-stadium/template/news.pug
@@ -1,9 +1,14 @@
 extends ./common
 
 block customizeCss
+  //Vendor
+  link(rel="stylesheet" type="text/css" href="./vendor/pagination/jquery.paginate.css")
+
   // Components CSS
   link(rel='stylesheet' type='text/css' href='./css/index.css')
   link(rel='stylesheet' type='text/css' href='./css/components/header.css')
+  link(rel='stylesheet' type='text/css' href='./css/components/pagination.css')
+
   // Common CSS
   link(rel='stylesheet' type='text/css' href='./css/main.css')
   link(rel='stylesheet' type='text/css' href='./css/news.css')
@@ -121,24 +126,40 @@ block mainContent
           .short-desc
             | Nike N354 l&agrave; t&ecirc;n d&#x1EF1; &aacute;n v&#x1EDB;i nh&#x1EEF;ng thi&#x1EBF;t k&#x1EBF; l&#x1EA5;y c&#x1EA3;m h&#x1EE9;ng t&#x1EEB; kho Archive kh&#x1ED5;ng l&#x1ED3; c&#x1EE7;a The Swoosh. N&#x1ED5;i b&#x1EAD;t trong s&#x1ED1;
             | &dstrok;&oacute; l&agrave; phi&ecirc;n b&#x1EA3;n Nike Air Force 1 Type.
-  nav.pagination-wrapper(aria-label='Page navigation example')
-    ul.pagination
-      li.page-item
-        a.page-link(href='#' aria-label='Previous')
-          span(aria-hidden='true') &laquo;
-      li.page-item
-        a.page-link(href='#') 1
-      li.page-item
-        a.page-link(href='#') 2
-      li.page-item
-        a.page-link(href='#') 3
-      li.page-item
-        a.page-link(href='#' aria-label='Next')
-          span(aria-hidden='true') &raquo;
-
+    a.news.news-even
+      .row
+        .thumbnail.col-lg-6.col-12
+          img.img-fluid(src='./image/news/news-6-thumnails.jpg' alt='')
+        .details.col-5.mx-1
+          .date
+            | 27/7/2019
+          .title Nike tung ảnh chính thức phối màu Supreme x SB Dunk Low “Metallic Silver”
+          .short-desc Mùa thu năm nay, lần collab thứ 3 của Supreme cùng dòng SB Dunk Low của Nike sẽ ra mắt.
+        .details-small.col-12
+          .date
+            | 27/7/2019
+          .title Nike tung ảnh chính thức phối màu Supreme x SB Dunk Low “Metallic Silver”
+          .short-desc Mùa thu năm nay, lần collab thứ 3 của Supreme cùng dòng SB Dunk Low của Nike sẽ ra mắt. 
+    a.news.news-odd
+      .row
+        .details.col-5.offset-1
+          .date
+            | 27/7/2019
+          .title Red Wing kết hợp cùng New Balance chế tác mẫu 997 đầy tinh xảo
+          .short-desc Trong lần collab này, Red Wing và New Balance sẽ mang đến dòng sneaker 997.
+        .thumbnail.col-lg-6.col-12
+          img.img-fluid(src='./image/news/news-7-thumnails.jpg' alt='')
+        .details-small.col-12
+          .date
+            | 27/7/2019
+          .title Red Wing kết hợp cùng New Balance chế tác mẫu 997 đầy tinh xảo
+          .short-desc Trong lần collab này, Red Wing và New Balance sẽ mang đến dòng sneaker 997.
 block footer
   include ./template-parts/footer
 
 block customizeScript
+  // Pagination Js
+  script(type="text/javascript" src="./vendor/pagination/jquery.paginate.js")
+
   script(src="./script/except-home-page.js")
   script(src="./script/news.js")
