--- a/obo-stadium/template/selling-order.pug
+++ b/obo-stadium/template/selling-order.pug
@@ -240,5 +240,5 @@ block footer
   include ./template-parts/footer
 
 block customizeScript
-  script(src="./script/buying-order.js")
+  script(src="./script/selling-order.js")
   script(src="./script/except-home-page.js")
