--- a/obo-stadium/template/template-parts/left-sidebar-account.pug
+++ b/obo-stadium/template/template-parts/left-sidebar-account.pug
@@ -10,5 +10,5 @@
     a.account.nav-item(href="./account.html") Quản lý tài khoản
     a.selling-buying-products.nav-item(href='./buying-selling-products.html') Quản lý mua/bán sản phẩm
     a.buying-order.nav-item(href='./buying-order.html') Đơn hàng mua
-    a.selling-order.nav-item Đơn hàng bán
+    a.selling-order.nav-item(href='./selling-order.html') Đơn hàng bán
     a.btn.btn-primary.red-btn.sign-out-btn(href="./index.html") Đăng xuất
