fix filterData type

--- a/obo-stadium/template/shop.pug
+++ b/obo-stadium/template/shop.pug
@@ -44,28 +44,28 @@ block mainContent
           .select-filter.collapse.show(id="brand-collapse")
             .item
               .pretty.p-svg.p-curve
-                input.filter-checkbox(type='checkbox' name='nike' id='nike')
+                input.filter-checkbox(type='checkbox' name='nike' id='nike' data-id="Nike")
                 .state.p-success
                   svg.svg.svg-icon(viewbox='0 0 20 20')
                     path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
                   label.checkbox-label(for='nike') Nike
             .item
               .pretty.p-svg.p-curve
-                input.filter-checkbox(type='checkbox' name='air-jordan' id='air-jordan')
+                input.filter-checkbox(type='checkbox' name='air-jordan' id='air-jordan', data-id="Air Jordan")
                 .state.p-success
                   svg.svg.svg-icon(viewbox='0 0 20 20')
                     path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
                   label.checkbox-label(for='air-jordan') Air Jordan
             .item
               .pretty.p-svg.p-curve
-                input.filter-checkbox(type='checkbox' name='adidas' id='adidas')
+                input.filter-checkbox(type='checkbox' name='adidas' id='adidas',  data-id="Adidas")
                 .state.p-success
                   svg.svg.svg-icon(viewbox='0 0 20 20')
                     path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
                   label.checkbox-label(for='adidas') Adidas
             .item
               .pretty.p-svg.p-curve
-                input.filter-checkbox(type='checkbox' name='converse' id='converse')
+                input.filter-checkbox(type='checkbox' name='converse' id='converse',  data-id="Converse")
                 .state.p-success
                   svg.svg.svg-icon(viewbox='0 0 20 20')
                     path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
@@ -73,14 +73,14 @@ block mainContent
             #see-more-dropdown
               .item
                 .pretty.p-svg.p-curve
-                  input.filter-checkbox(type='checkbox' name='asics' id='asics')
+                  input.filter-checkbox(type='checkbox' name='asics' id='asics', data-id="Asics")
                   .state.p-success
                     svg.svg.svg-icon(viewbox='0 0 20 20')
                       path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
                     label.checkbox-label(for='asics') Asics
               .item
                 .pretty.p-svg.p-curve
-                  input.filter-checkbox(type='checkbox' name='vans' id='vans')
+                  input.filter-checkbox(type='checkbox' name='vans' id='vans', data-id="Vans")
                   .state.p-success
                     svg.svg.svg-icon(viewbox='0 0 20 20')
                       path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
@@ -96,28 +96,28 @@ block mainContent
           .select-filter.collapse.show(id="categories-collapse")
             .item
               .pretty.p-svg.p-curve
-                input.filter-checkbox(type='checkbox' name='male' id='male')
+                input.filter-checkbox(type='checkbox' name='male' id='male',  data-id="Male")
                 .state.p-success
                   svg.svg.svg-icon(viewbox='0 0 20 20')
                     path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
                   label.checkbox-label(for='male') Nam
             .item
               .pretty.p-svg.p-curve
-                input.filter-checkbox(type='checkbox' name='female' id='female')
+                input.filter-checkbox(type='checkbox' name='female' id='female', data-id="Female")
                 .state.p-success
                   svg.svg.svg-icon(viewbox='0 0 20 20')
                     path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
                   label.checkbox-label(for='female') N&#x1EEF;
             .item
               .pretty.p-svg.p-curve
-                input.filter-checkbox(type='checkbox' name='youth' id='youth')
+                input.filter-checkbox(type='checkbox' name='youth' id='youth', data-id="Youth")
                 .state.p-success
                   svg.svg.svg-icon(viewbox='0 0 20 20')
                     path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
                   label.checkbox-label(for='youth') Thi&#x1EBF;u ni&ecirc;n
             .item
               .pretty.p-svg.p-curve
-                input.filter-checkbox(type='checkbox' name='toddler' id='toddler')
+                input.filter-checkbox(type='checkbox' name='toddler' id='toddler', data-id="Toddler")
                 .state.p-success
                   svg.svg.svg-icon(viewbox='0 0 20 20')
                     path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
@@ -148,14 +148,14 @@ block mainContent
             .date-row
               .item
                 .pretty.p-svg.p-curve
-                  input.filter-checkbox(type='checkbox' name='under-2010' id='under-2010')
+                  input.filter-checkbox(type='checkbox' name='under-2010' id='under-2010' data-id="<2010")
                   .state.p-success
                     svg.svg.svg-icon(viewbox='0 0 20 20')
                       path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
                     label.checkbox-label(for='under-2010') < 2010
               .item
                 .pretty.p-svg.p-curve
-                  input.filter-checkbox(type='checkbox' name='2011' id='2011')
+                  input.filter-checkbox(type='checkbox' name='2011' id='2011', data-id="2011")
                   .state.p-success
                     svg.svg.svg-icon(viewbox='0 0 20 20')
                       path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
@@ -163,14 +163,14 @@ block mainContent
             .date-row
               .item
                 .pretty.p-svg.p-curve
-                  input.filter-checkbox(type='checkbox' name='2012' id='2012')
+                  input.filter-checkbox(type='checkbox' name='2012' id='2012', data-id="2012")
                   .state.p-success
                     svg.svg.svg-icon(viewbox='0 0 20 20')
                       path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
                     label.checkbox-label(for='2012') 2012
               .item
                 .pretty.p-svg.p-curve
-                  input.filter-checkbox(type='checkbox' name='2013' id='2013')
+                  input.filter-checkbox(type='checkbox' name='2013' id='2013', data-id="2013")
                   .state.p-success
                     svg.svg.svg-icon(viewbox='0 0 20 20')
                       path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
@@ -178,14 +178,14 @@ block mainContent
             .date-row
               .item
                 .pretty.p-svg.p-curve
-                  input.filter-checkbox(type='checkbox' name='2014' id='2014')
+                  input.filter-checkbox(type='checkbox' name='2014' id='2014', data-id="2014")
                   .state.p-success
                     svg.svg.svg-icon(viewbox='0 0 20 20')
                       path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
                     label.checkbox-label(for='2014') 2014
               .item
                 .pretty.p-svg.p-curve
-                  input.filter-checkbox(type='checkbox' name='2015' id='2015')
+                  input.filter-checkbox(type='checkbox' name='2015' id='2015', data-id="2015")
                   .state.p-success
                     svg.svg.svg-icon(viewbox='0 0 20 20')
                       path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
@@ -193,14 +193,14 @@ block mainContent
             .date-row
               .item
                 .pretty.p-svg.p-curve
-                  input.filter-checkbox(type='checkbox' name='2016' id='2016')
+                  input.filter-checkbox(type='checkbox' name='2016' id='2016', data-id="2016")
                   .state.p-success
                     svg.svg.svg-icon(viewbox='0 0 20 20')
                       path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
                     label.checkbox-label(for='2016') 2016
               .item
                 .pretty.p-svg.p-curve
-                  input.filter-checkbox(type='checkbox' name='2017' id='2017')
+                  input.filter-checkbox(type='checkbox' name='2017' id='2017', data-id="2017")
                   .state.p-success
                     svg.svg.svg-icon(viewbox='0 0 20 20')
                       path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
@@ -208,14 +208,14 @@ block mainContent
             .date-row
               .item
                 .pretty.p-svg.p-curve
-                  input.filter-checkbox(type='checkbox' name='2018' id='2018')
+                  input.filter-checkbox(type='checkbox' name='2018' id='2018', data-id="2018")
                   .state.p-success
                     svg.svg.svg-icon(viewbox='0 0 20 20')
                       path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
                     label.checkbox-label(for='2018') 2018
               .item
                 .pretty.p-svg.p-curve
-                  input.filter-checkbox(type='checkbox' name='2019' id='2019')
+                  input.filter-checkbox(type='checkbox' name='2019' id='2019', data-id="2019")
                   .state.p-success
                     svg.svg.svg-icon(viewbox='0 0 20 20')
                       path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
