--- a/obo-stadium/sass/bid-details.scss
+++ b/obo-stadium/sass/bid-details.scss
@@ -93,5 +93,9 @@
       display: block;
       padding: $sixteen-pixel $twenty-pixel;
     }
+
+    .cancel-btn {
+      margin-top: $ten-pixel;
+    }
   }
 }
