--- a/obo-stadium/template/buying-selling-products.pug
+++ b/obo-stadium/template/buying-selling-products.pug
@@ -74,9 +74,9 @@ block mainContent
                 .header-item
                   .order-number-wrapper
                     | Mã đơn 
-                    a.order-number(href='#')
+                    a.order-number(href='./bid-details-canceled.html')
                       | #123abc
-                  a.full-details(href='#')
+                  a.full-details(href='./bid-details-canceled.html')
                     | Xem chi tiết
                 .item-info-wrapper
                   .product-info-wrapper
@@ -94,7 +94,7 @@ block mainContent
               .item-small
                 .order-number-wrapper
                   | Mã đơn 
-                  a.order-number(href='#')
+                  a.order-number(href='./bid-details-canceled.html')
                     | #123abc
                 .item-info-wrapper
                   .product-info-wrapper
@@ -237,7 +237,7 @@ block mainContent
                         | Adidas Yeezy Boost 700 Wave Runner Solid Grey
                       .size
                         | 8US | 41VN | 26CM
-                      .bid-count.status.successfully Đã bán
+                      .bid-count.status.successfully Đã bán thành công
                   .price.asks-price
                     | 9.550.000 &#x20AB;
               // Item Small
@@ -253,7 +253,7 @@ block mainContent
                         | Adidas Yeezy Boost 700 Wave Runner Solid Grey
                       .size
                         | 8US | 41VN | 26CM
-                      .bid-count.status.successfully Đã bán
+                      .bid-count.status.successfully Đã bán thành công
                   .price.asks-price
                     | 9.550.000 &#x20AB;
 
