--- a/obo-stadium/css/main.css
+++ b/obo-stadium/css/main.css
@@ -125,6 +125,10 @@ a:hover {
   background-color: #F04E40 !important;
 }
 
+button:disabled {
+  cursor: not-allowed;
+}
+
 .form-control {
   color: #333333;
   height: auto;
