--- a/obo-stadium/template/buying-order.pug
+++ b/obo-stadium/template/buying-order.pug
@@ -32,7 +32,7 @@ block mainContent
               li.nav-item
                 a#sell-tab.nav-link(data-toggle='pill' href='#sell' role='tab' aria-controls='sell' aria-selected='false') &Dstrok;&atilde; giao h&agrave;ng
               li.nav-item
-                a#sell-tab.nav-link(data-toggle='pill' href='#sell' role='tab' aria-controls='sell' aria-selected='false') &Dstrok;&atilde; hu&#x1EF7;
+                a#canceled-tab.nav-link(data-toggle='pill' href='#canceled' role='tab' aria-controls='canceled' aria-selected='false') &Dstrok;&atilde; hu&#x1EF7;
           #pills-tabContent.tab-content
             // pending Section
             #pending.tab-pane.fade.show.active(role='tabpanel' aria-labelledby='pending-tab')
@@ -142,15 +142,15 @@ block mainContent
                   .price.bid-price
                     | 9.310.000 &#x20AB;
             // Asks Section
-            #sell.tab-pane.fade(role='tabpanel' aria-labelledby='sell-tab')
+            #canceled.tab-pane.fade(role='tabpanel' aria-labelledby='canceled-tab')
               // Item
               .item
                 .header-item
                   .order-number-wrapper
                     | M&atilde; &dstrok;&#x1A1;n 
-                    a.order-number(href='./order-details.html')
+                    a.order-number(href='./order-details-canceled.html')
                       | #123abc
-                  a.full-details(href='./order-details.html')
+                  a.full-details(href='./order-details-canceled.html')
                     | Xem chi ti&#x1EBF;t
                 .item-info-wrapper
                   .product-info-wrapper
@@ -167,7 +167,7 @@ block mainContent
               .item-small
                 .order-number-wrapper
                   | M&atilde; &dstrok;&#x1A1;n 
-                  a.order-number(href='./order-details.html')
+                  a.order-number(href='./order-details-canceled.html')
                     | #123abc
                 .item-info-wrapper
                   .product-info-wrapper
