update add payment methods buy page

--- a/obo-stadium/css/components/buying/shipping-info.css
+++ b/obo-stadium/css/components/buying/shipping-info.css
@@ -16,6 +16,11 @@
   border: 0px;
 }
 
+.add-new-payment-methods {
+  display: none;
+  margin-top: 1.25rem;
+}
+
 #addNewShipping .modal-header,
 #addNewShipping .modal-body,
 #addNewShipping .modal-footer,
