--- a/obo-stadium/sass/components/buying/shipping-info.scss
+++ b/obo-stadium/sass/components/buying/shipping-info.scss
@@ -21,6 +21,11 @@
   }
 }
 
+.add-new-payment-methods {
+  display: none;
+  margin-top: $twenty-pixel;
+}
+
 // New Shipping Modal
 
 #addNewShipping,
