--- a/obo-stadium/template/buy-page.pug
+++ b/obo-stadium/template/buy-page.pug
@@ -83,6 +83,7 @@ block mainContent
               .visa-master
                 | Thanh toán bằng thẻ quốc tế Visa, Master, JCB
           .card-place
+          button.btn.btn-primary.add-new-payment-methods.red-btn(data-toggle="modal" data-target="#paymentMethods") Thêm thẻ thanh toán
         a(href='./congrats.html')
           button.btn.btn-primary.confirm-btn.red-btn
             | Đặt mua
